@@ -9,6 +9,7 @@ Default Qt Client
 - Option to disable sound device detection notifications in statusbar events
 Android Client
 - Fixed bug where join and leave events were not announced when focused on another channel
+- fixed bug where status messages wouldn't be set at login sometimes
 - Changed client name display format from "<ClientName> version <Version>" to "<ClientName> <Version>"
 - Join last channel checkbox is now disabled by default in Server Properties Dialog
 - Maximum bitrate can be specified in SpeexVBR
